--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,8 +1,11 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     %h2= link_to restaurant.name, restaurant_path(restaurant)
-    %p= link_to "Edit #{ restaurant.name }", edit_restaurant_path(restaurant)
-    %p= link_to "Delete #{ restaurant.name }", restaurant_path(restaurant), method: :delete
+    = link_to "Edit #{ restaurant.name }", edit_restaurant_path(restaurant)
+    = link_to "Delete #{ restaurant.name }", restaurant_path(restaurant), method: :delete
+    = link_to "Review #{ restaurant.name }", new_restaurant_review_path(restaurant)
+    - restaurant.reviews.each do |review|
+    %h3 "Thoughts: #{review.thoughts}"
 
 - else
   %h1 No restaurants yet!
