--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -5,7 +5,7 @@
     = link_to "Delete #{ restaurant.name }", restaurant_path(restaurant), method: :delete
     = link_to "Review #{ restaurant.name }", new_restaurant_review_path(restaurant)
     - restaurant.reviews.each do |review|
-    %h3 "Thoughts: #{review.thoughts}"
+      %h3 "#{review.rating} stars: #{review.thoughts}"
 
 - else
   %h1 No restaurants yet!
