--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,13 +1,13 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     %h2= link_to restaurant.name, restaurant_path(restaurant)
-    = link_to "Edit #{ restaurant.name }", edit_restaurant_path(restaurant)
-    = link_to "Delete #{ restaurant.name }", restaurant_path(restaurant), method: :delete
-    = link_to "Review #{ restaurant.name }", new_restaurant_review_path(restaurant)
+    %br= link_to "Edit #{ restaurant.name }", edit_restaurant_path(restaurant)
+    %br= link_to "Delete #{ restaurant.name }", restaurant_path(restaurant), method: :delete
+    %br= link_to "Review #{ restaurant.name }", new_restaurant_review_path(restaurant)
     - restaurant.reviews.each do |review|
       %h3 "#{review.rating} stars: #{review.thoughts}"
 
 - else
   %h1 No restaurants yet!
-
+  %br
 %a(href='/restaurants/new') Add a restaurant
